@@ -1,4 +1,12 @@
-2009-08-17  Sterling Augustine  <sterling@jaw.hq.tensilica.com>
+2009-08-18  Sterling Augustine  <sterling@tensilica.com>
+
+	* config/tc-xtensa.c (xtensa_create_xproperty_segments): Use
+	sizeof instead of hard-coded value.
+	(add_xt_block_frags): Remove unused local variable.
+	(frag_flags_to_number): Change return type to flagword.  Remove
+	unused local variable.
+
+2009-08-17  Sterling Augustine  <sterling@tensilica.com>
 
 	* config/tc-xtensa.c (xtensa_frob_label): move call to 
 	do_align_targets to set frag_type only.
